# brethren-doctrine

./: .env.example  .gitignore  README.md  USAGE.md  personal-beliefs.json  pyproject.toml  questions.json
bd_mcp/: __init__.py  server.py  streaming.py
docker/: docker-compose.yml
docs/: ANONYMIZATION.md  ANSWER_SCHEMA.md  ARCHITECTURE.md  AUDIT_bhsa.md  AUDIT_coptic_scriptorium.md  AUDIT_etcbc_parallels.md  AUDIT_etcbc_phono.md  AUDIT_macula_greek.md  AUDIT_macula_hebrew.md  AUDIT_morphgnt.md  AUDIT_open_cbgm_3_john.md  AUDIT_openbible.md  AUDIT_oshb.md  AUDIT_peshitta.md  AUDIT_phase_d4_count_gate.md  AUDIT_phase_d_preflight_verification.md  AUDIT_pos_collapse_blast_radius.md  AUDIT_stepbible_morph_codes.md  AUDIT_stepbible_proper_nouns.md  AUDIT_stepbible_tagnt.md  AUDIT_stepbible_tahot.md  AUDIT_stepbible_tbesg.md  AUDIT_stepbible_tbesh.md  AUDIT_stepbible_tflsj.md  AUDIT_stepbible_ttesv.md  AUDIT_stepbible_tvtms.md  AUDIT_tahot_30row_deepdive.md  AUDIT_theographic.md  AUDIT_tsk.md  AUDIT_vulgate_clementine.md  AUTHORITY_HIERARCHY.md  CONCORDANCE.md  CULTURAL_SCHEMA.md  CULTURAL_SCHEMA_DECISIONS.md  EVIDENCE_SCHEMA.md  HERMENEUTICS.md  INGESTION_PATTERNS.md  LICENSE_TAGGING.md  MCP_TOOLS.md  PHASE_D_A2_EVIDENCE.md  (+27 more)
embeddings/: bootstrap.py  bootstrap_qdrant.py  embed_and_load.py  embed_cultural.py  embed_lexical.py
evidence/: doc-adoption.json  doc-antinomianism-denial.json  doc-assurance-of-salvation.json  doc-autonomy-of-local-assembly.json  doc-baptism-faith-precedes.json  doc-baptismal-regeneration-denial.json  doc-bodily-ascension.json  doc-bodily-resurrection-of-christ.json  doc-canon-closed.json  doc-christ-full-deity.json  doc-christ-session-exaltation.json  doc-christ-sinlessness.json  doc-conscience-witness.json  doc-conversion.json  doc-divine-aseity.json  doc-divine-decrees.json  doc-divine-immutability.json  doc-divine-omnipotence.json  doc-divine-omniscience.json  doc-divine-sovereignty.json  doc-effectual-calling.json  doc-elders-not-sacerdotal.json  doc-election.json  doc-extent-of-atonement.json  doc-hypostatic-union.json  doc-idolatry-root-sin.json  doc-imputed-righteousness.json  doc-inability-of-fallen-man.json  doc-inclusivism-denial.json  doc-inherited-corruption.json  doc-inherited-guilt.json  doc-mark-discipline-exercised.json  doc-mark-ordinances-administered.json  doc-mark-word-preached.json  doc-modalism-denial.json  doc-penal-substitution.json  doc-perseverance-eternal-security.json  doc-pluralism-denial.json  doc-prosperity-gospel-denial.json  doc-regeneration-monergistic.json  (+22 more)
graph/: cultural.cypher  lexical.cypher  schema.cypher
(+372 files in other folders)
