[project]
name = "brethren-doctrine"
version = "0.1.0"
description = "Personal-use theological GraphRAG: sermon notes + SOF + Bible interlinear over Neo4j + Qdrant"
requires-python = ">=3.11,<3.14"
dependencies = [
    "voyageai>=0.3.5",
    "qdrant-client>=1.13.0",
    "neo4j>=5.27.0",
    "neo4j-graphrag>=1.6.0",
    "fastembed>=0.5.1",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "diskcache>=5.6.3",
    "httpx>=0.28.1",
    "pandas>=2.2.0",
    "lxml>=5.3.0",
    "rich>=13.9.0",
    "typer>=0.15.0",
    "reportlab>=4.5.0",
]

[project.optional-dependencies]
rerank = [
    "sentence-transformers>=3.3.0",
    "torch>=2.5.0",
]
server = [
    "fastmcp>=3.0.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S"]
ignore = ["E501", "S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
