[project]
name = "brethren-doctrine"
version = "0.1.0"
description = "Manuscript-anchored biblical doctrine engine"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "lxml>=5.3",
    "neo4j>=5.27",
    "qdrant-client>=1.13",
    "voyageai>=0.3.7",
    "httpx>=0.28",
    "mcp>=1.27",
    "text-fabric>=13.1",
    "reportlab>=4.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "black>=24.10",
    "mypy>=1.13",
    "hypothesis>=6.122",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["FlagEmbedding"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["bd_mcp.tools.*"]
disable_error_code = ["untyped-decorator"]

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingest", "embeddings", "retrieval", "bd_mcp", "pipeline2"]
